change the display style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta name="keywords" content="克鲁赛德战记 6星英雄 Box" />
     <meta name="description" content="克鲁赛德战记全6星英雄盒子，图鉴欣赏。" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Crusaders Quest - 克鲁赛德战记 Box</title>
     <style>
         body, html, div,h1,h2,h3, img, ul, li, p, a { margin: 0; padding: 0; }
@@ -67,7 +66,7 @@
         }
 
         @media(max-width:982px) {
-            .container { width: 100%; }
+            /*.container { width: 100%; }*/
         }
 
         @media(max-width:600px) {
