--- a/cq-3d.html
+++ b/cq-3d.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="keywords" content="克鲁赛德战记 6星英雄 Box 3D" />
     <meta name="description" content="克鲁赛德战记全6星英雄盒子，3D环绕效果。" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>3D Box- Crusaders Quest - 克鲁赛德战记</title>
     <link rel='stylesheet prefetch' href='css/stylesheet.css'>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
