3d bugs adjust&statictics

--- a/cq-3d.html
+++ b/cq-3d.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="克鲁赛德战记 6星英雄 Box 3D" />
     <meta name="description" content="克鲁赛德战记全6星英雄盒子，3D环绕效果。" />
     <title>3D Box- Crusaders Quest - 克鲁赛德战记</title>
+    <meta content="width=device-width, initial-scale=1.0, user-scalable=no"> 
     <link rel='stylesheet prefetch' href='css/stylesheet.css'>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
     <style>
@@ -17,6 +18,7 @@
         .avatar_type li a:hover,.avatar_type li .on { background-color: #FFEEDD; color:#fff; border-top: 2px solid #ffffff; border-right: 2px solid #bcbb99; border-bottom: 2px solid #bcbb99; border-left: 2px solid #ffffff; }
         .avatar_type li a img { vertical-align: middle; margin-right: 7px; margin-left: 3px; }
         #debug{display: none;}
+        #cnzz_stat_icon_1257087580{display: none;}
     </style>
 </head>
 <body>
@@ -144,5 +146,6 @@
     </div>
     <script src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/js/libs.min.js'></script>
     <script src="js/index.js"></script>
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257087580'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1257087580%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
