--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
         .author { font: 14px bold; text-align: right; color: #C98A0A; line-height: 40px; margin-right: 20px; position: absolute; bottom: 0; right: 0; }
 
+        #cnzz_stat_icon_1257087580{display: none;}
         @media(min-width:1366px) {
             .container { width: 100%; }
         }
@@ -325,6 +326,7 @@
                 run(index);
             }
         };
-    </script>
+    </script>    
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257087580'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1257087580%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
