--- a/cq-3d.html
+++ b/cq-3d.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="克鲁赛德战记 6星英雄 Box 3D" />
     <meta name="description" content="克鲁赛德战记全6星英雄盒子，3D环绕效果。" />
     <title>3D Box- Crusaders Quest - 克鲁赛德战记</title>
-    <meta content="width=device-width, initial-scale=1.0, user-scalable=no"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" />
     <link rel='stylesheet prefetch' href='css/stylesheet.css'>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
     <style>
@@ -17,7 +17,7 @@
         .avatar_type li a { display: block; background-color: #887766; font-size: 14px; width: 63px; border-top: 2px solid #aa9977; border-right: 2px solid #554433; border-bottom: 2px solid #554433; border-left: 2px solid #aa9977; background-color: #887766; }
         .avatar_type li a:hover,.avatar_type li .on { background-color: #FFEEDD; color:#fff; border-top: 2px solid #ffffff; border-right: 2px solid #bcbb99; border-bottom: 2px solid #bcbb99; border-left: 2px solid #ffffff; }
         .avatar_type li a img { vertical-align: middle; margin-right: 7px; margin-left: 3px; }
-        #debug{display: none;}
+        #debug{/*display: none;*/}
         #cnzz_stat_icon_1257087580{display: none;}
     </style>
 </head>
