--- a/cq-3d.html
+++ b/cq-3d.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="克鲁赛德战记 6星英雄 Box 3D" />
     <meta name="description" content="克鲁赛德战记全6星英雄盒子，3D环绕效果。" />
     <title>3D Box- Crusaders Quest - 克鲁赛德战记</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" />
+    <meta name="viewport" content="width=device-width, user-scalable=0" />
     <link rel='stylesheet prefetch' href='css/stylesheet.css'>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
     <style>
