--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         body { background-color: #0094ff; background-color: #24465F; background-color: #564535; }
 
         .container { width: 982px; margin: 0 auto; overflow: hidden; text-align: center; font-size: 0; position: relative; }
-        #player { width: 300px; height: 30px; position:absolute;right:0; display:none;}
+        #playerwrap{ display:none;}
+        #player {width:300px;height:30px; position:absolute;right:0;}
 
         .head { width: 100%; text-align: left; font-size: 0px; height: 180px; position: relative; z-index: 2; }
 
@@ -22,9 +23,9 @@
 
         .header { color: #fff2f1; text-align: right; text-shadow: 1px 0px 0 #960101,-1px 0px 0 #960101,0px 1px 0 #960101,0px -1px 0 #960101; z-index: 9; }
 
-        .enname { font-size: 50px; font-family: "Visitor TT1 BRK","Fixedsys","Terminal","Simsun",serif; /*overflow: hidden;*/ }
+        .enname { font-size: 50px; /*overflow: hidden;*/ }
 
-        .enname { color: #fff2f1; text-decoration: none; border-bottom: 1px solid #fff2f1; }
+        .enname a { color: #fff2f1; text-decoration: none; border-bottom: 1px solid #fff2f1; font-family: "Visitor TT1 BRK","Fixedsys","Terminal","Simsun",serif; }
 
         .enname a:hover { /*text-decoration: underline;*/ }
 
@@ -44,13 +45,13 @@
         .avatarlist { margin: 0 5px; }
         .avatarlist li { border: 1px solid #e2e2e2; display: inline-block; position: relative; text-align: center; }
 
-        .avatar { width: 105px; }
+        .avatar { width: 105px; height :90px;}
 
         .name { font-size: 12px; line-height: 30px; color: #0FF; width: 107px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
 
         .tp { position: absolute; top: 5px; right: 5px; width: 14px; }
 
-        .lv img { width: 80px; }
+        .lv img { width: 80px;height:11px; }
 
         .avatarlist .lion { display: none; }
         .empty { height: 40px; line-height: 40px; width: 100%;font-size: 14px;text-align:left;margin-left: 5px; }
@@ -87,15 +88,17 @@
             <img class="icon" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/warrior/光明剑士里昂.png" title="★6 光明剑士里昂" />
             <div class="title">
                 <div class="header">
-                    <h1 class="enname">Crusaders Quest</h1>
+                    <h1 class="enname"><a href="#">Crusaders Quest</a></h1>
                     <h2 class="cnname"><img class="music" id="music" src="res/music-32.png" width="16" height="16" />克鲁赛德战记</h2>
                     <div class="bgmlist" id="bgmlist">
-                        <audio id="player" controls="controls" height="30" width="300">
+                        <div id="playerwrap">
+                            <audio id="player" controls="controls" height="30" width="300">
                             <source src="" type="audio/mp3" />
                             <source src="" type="audio/ogg" />
                             <embed height="30" width="300" src="" />
                             Your browser does not support this audio format.
                         </audio>
+                        </div>
                         <div id="mlist" class="mlist">
                             <ul>
                                 <li><a href="#">bgm_battle_thema_01.mp3</a></li>
@@ -229,15 +232,17 @@
             <li><img class="avatar" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/priest/诱惑之奥菲欧.png" title="★6 诱惑之奥菲欧" /><img class="tp" src="res/priest.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">诱惑之奥菲欧</p></li>
             <li><img class="avatar" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/priest/星光之娅莉娅.png" title="★6 星光之娅莉娅" /><img class="tp" src="res/priest.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">星光之娅莉娅</p></li>
         </ul>
-        <div class="empty"><a href="cq-3d.html" title="3D效果，暂不支持IE"> 2D还不够？试试3D效果！</a></div>
+        <div class="empty"><a href="cq-3d.html" title="3D效果，暂不支持IE"> 2D不过瘾？试试3D效果！</a></div>
         <div class="author">
             Design By：路人甲
         </div>
-        <audio id="splash" height="30" width="300">
+        <div style="display: none;">
+            <audio id="splash" height="30" width="300">
             <source src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/splash sound.mp3" type="audio/mp3" />
             <source src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/splash sound.ogg" type="audio/ogg" />
             <embed height="30" width="300" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/splash sound.mp3" />
         </audio>
+        </div>
     </div>
     <script>
         var bgms = ["bgm/bgm_battle_thema_01.mp3", "bgm/bgm_battle_thema_intro.mp3", "bgm/bgm_boss_1_victory.mp3", "bgm/bgm_boss_2_danger.mp3", "bgm/bgm_boss_intro_long.mp3", "bgm/bgm_boss_intro_short.mp3", "bgm/bgm_ep2_battle_thema_intro.mp3", "bgm/bgm_ep2_battle_thema_loop.mp3", "bgm/bgm_ep3_battle_thema_intro.mp3", "bgm/bgm_ep3_battle_thema_loop.mp3", "bgm/bgm_ep4_battle_thema_intro.mp3", "bgm/bgm_ep4_battle_thema_loop.mp3", "bgm/bgm_ep5_battle_thema_intro.mp3", "bgm/bgm_ep5_battle_thema_loop.mp3", "bgm/bgm_ep6_battle_thema_intro.mp3", "bgm/bgm_ep6_battle_thema_loop_1.mp3", "bgm/bgm_finalboss_intro.mp3", "bgm/bgm_finalboss_loop.mp3", "bgm/bgm_god.mp3", "bgm/bgm_hero_upgrade.mp3", "bgm/bgm_lobby_thema.mp3", "bgm/bgm_sad.mp3", "bgm/bgm_smash_thema.mp3", "bgm/bgm_smash_theme_intro.mp3", "bgm/bgm_smash_theme_loop.mp3", "bgm/bgm_soul_battle_thema_intro.mp3", "bgm/bgm_soul_battle_thema_loop.mp3", "bgm/cutscene_intro.mp3", "bgm/Prologue.mp3", "bgm/Prologue_intro.mp3", "bgm/Title_Intro.mp3", "bgm/Title_Loop.mp3"];
@@ -249,7 +254,7 @@
         mlist.onmouseover = showmlist;
         mlist.onmouseleave = hidemlist;
         music.onclick = controlmusic;
-
+        window.onclick=mlist.onmouseleave;
         window.onload = function () {
             var mp = new MusicPlayer({ id: "player", list: bgms, loops: true });
             var mul = mlist.children[0].children;
@@ -272,7 +277,7 @@
             mlist.style.display = "none";
         }
         function controlmusic() {
-            var bgmlist = document.getElementById("player");
+            var bgmlist = document.getElementById("playerwrap");
             if (bgmlist.style.display == "block") {
                 bgmlist.style.display = "none";
             } else {
