--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" />    
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="Bookmark" href="favicon.ico">
     <meta name="keywords" content="克鲁赛德战记 6星英雄 Box" />
     <meta name="description" content="克鲁赛德战记全6星英雄盒子，图鉴欣赏。" />
     <title>Crusaders Quest - 克鲁赛德战记 Box</title>
