--- a/cq-3d.html
+++ b/cq-3d.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="Bookmark" href="favicon.ico">
     <meta name="keywords" content="克鲁赛德战记 6星英雄 Box 3D" />
     <meta name="description" content="克鲁赛德战记全6星英雄盒子，3D环绕效果。" />
     <title>3D Box- Crusaders Quest - 克鲁赛德战记</title>
