--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             Design By：路人甲
         </div>
         <div id="divCenter" style="position: fixed; z-index: 9; display: none; background-color: #564535; width:30px; height:30px;left:30%;top:200px; border:5px solid #fff;">
-            <img src="res/close.png" style="position:absolute;right:-15px;top:-15px;" onclick="picClose();"/>
+            <img src="res/close.png" style="position:absolute;right:-15px;top:-15px;width:10%;" onclick="picClose();"/>
             <img id="limg" src="" style="width:100%;"/>
             <p id="lname" class="name lname">&nbsp;</p>
         </div>
@@ -274,7 +274,7 @@
         window.onclick=mlist.onmouseleave;
         window.onload = function () {
             var divCenter=document.getElementById("divCenter");
-            var h=window.innerHeight/2,w=window.innerWidth/2;
+            var h=document.body.clientHeight/2,w=document.body.clientWidth/2;
             var min=h;
             if(min>w){
                 min=w;
