--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
 
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/屠魔猎手溪谷莉娜.png" title="★6 屠魔猎手溪谷莉娜" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">屠魔猎手溪谷莉娜</p></li>
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/红莲之弓矢德姆娜.png" title="★6 红莲之弓矢德姆娜" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">红莲之弓矢德姆娜</p></li>
-            <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/驯龙高手·坤.png" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">驯龙高手·坤</p></li>
+            <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/驯龙高手·坤.png" title="★6 驯龙高手·坤"  /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">驯龙高手·坤</p></li>
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/疾风半藏.png" title="★6 疾风半藏" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">疾风半藏</p></li>
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/密使罗宾汉.png" title="★6 密使罗宾汉" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">密使罗宾汉</p></li>
-            <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/R-0.png" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">R-0</p></li>
+            <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/R-0.png" title="★6 R-0" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">R-0</p></li>
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/月圆奇波郎.png" title="★6 月圆奇波郎" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">月圆奇波郎</p></li>
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/百发百中小光.png" title="★6 百发百中小光" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">百发百中小光</p></li>
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/寒霜恶灵妮芬.png" title="★6 寒霜恶灵妮芬" /><img class="tp" src="res/archer.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">寒霜恶灵妮芬</p></li>
@@ -249,7 +249,7 @@
             Design By：路人甲
         </div>
         <div id="divCenter" style="position: fixed; z-index: 9; display: none; background-color: #564535; width:30px; height:30px;left:30%;top:200px; border:5px solid #fff;">
-            <img src="res/close.png" style="position:absolute;right:-15px;top:-15px;width:10%;" onclick="picClose();"/>
+            <img src="res/close.png" style="position:absolute;right:-7%;top:-7%;width:15%;" onclick="picClose();"/>
             <img id="limg" src="" style="width:100%;"/>
             <p id="lname" class="name lname">&nbsp;</p>
         </div>
