happy new year!

--- a/cq-3d.html
+++ b/cq-3d.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet prefetch' href='css/stylesheet.css'>
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
     <style>
-        .name { line-height: 30px; color: #0FF; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
+        .name { line-height: 30px; color: #0FF; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;font-size: 18px; }
         .tp { position: absolute; top: 5px; right: 10px; }
         ul, li { list-style: none; padding: 0; margin: 0; }
         .avatar_type { font-size: 0; margin-top: 10px;line-height:30px; }
@@ -61,6 +61,7 @@
             <li class='avatars warrior trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/warrior/蒙泰终极型.png' title='★6 蒙泰终极型' /><img class='tp' src='res/warrior.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>蒙泰终极型</p></div></li>
             <li class='avatars warrior trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/warrior/钢铁骑士圣女贞德.png' title='★6 钢铁骑士圣女贞德' /><img class='tp' src='res/warrior.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>钢铁骑士圣女贞德</p></div></li>
             <li class='avatars warrior trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/warrior/黑骑士莱昂内尔.png' title='★6 黑骑士莱昂内尔' /><img class='tp' src='res/warrior.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>黑骑士莱昂内尔</p></div></li>
+            <li class='avatars warrior trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/warrior/森林魔女娅莉塔.png' title='★6 森林魔女娅莉塔' /><img class='tp' src='res/warrior.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>森林魔女娅莉塔</p></div></li>
         </ul>
         <ul class="paladins">
             <li class='avatars paladin trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/paladin/V-暴走型.png' title='★6 V-暴走型' /><img class='tp' src='res/paladin.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>V-暴走型</p></div></li>
@@ -77,6 +78,7 @@
             <li class='avatars paladin trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/paladin/雷神托尔.png' title='★6 雷神托尔' /><img class='tp' src='res/paladin.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>雷神托尔</p></div></li>
             <li class='avatars paladin trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/paladin/风华绝代织女.png' title='★6 风华绝代织女' /><img class='tp' src='res/paladin.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>风华绝代织女</p></div></li>
             <li class='avatars paladin trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/paladin/黑暗骑士贝恩.png' title='★6 黑暗骑士贝恩' /><img class='tp' src='res/paladin.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>黑暗骑士贝恩</p></div></li>
+            <li class='avatars paladin trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/paladin/不败将军秦琼.png' title='★6 不败将军秦琼' /><img class='tp' src='res/paladin.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>不败将军秦琼</p></div></li>
         </ul>
         <ul class="archers">
             <li class='avatars archer trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/R-0.png' title='★6 R-0' /><img class='tp' src='res/archer.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>R-0</p></div></li>
@@ -93,6 +95,8 @@
             <li class='avatars archer trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/红莲之弓矢德姆娜.png' title='★6 红莲之弓矢德姆娜' /><img class='tp' src='res/archer.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>红莲之弓矢德姆娜</p></div></li>
             <li class='avatars archer trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/驯龙高手·坤.png' title='★6 驯龙高手·坤' /><img class='tp' src='res/archer.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>驯龙高手·坤</p></div></li>
             <li class='avatars archer trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/黑曼巴.png' title='★6 黑曼巴' /><img class='tp' src='res/archer.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>黑曼巴</p></div></li>
+            <li class='avatars archer trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/首席舞蹈家李.png' title='★6 首席舞蹈家李' /><img class='tp' src='res/archer.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>首席舞蹈家李</p></div></li>
+            <li class='avatars archer trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/archer/火焰之迎春.png' title='★6 火焰之迎春' /><img class='tp' src='res/archer.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>火焰之迎春</p></div></li>
         </ul>
         <ul class="hunters">
             <li class='avatars hunter trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/hunter/司令斯派洛.png' title='★6 司令斯派洛' /><img class='tp' src='res/hunter.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>司令斯派洛</p></div></li>
@@ -127,6 +131,7 @@
             <li class='avatars wizard trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/wizard/魔法少女明日香.png' title='★6 魔法少女明日香' /><img class='tp' src='res/wizard.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>魔法少女明日香</p></div></li>
             <li class='avatars wizard trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/wizard/黑桃王后爱丽丝.png' title='★6 黑桃王后爱丽丝' /><img class='tp' src='res/wizard.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>黑桃王后爱丽丝</p></div></li>
             <li class='avatars wizard trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/wizard/黑袍魔女桃乐丝.png' title='★6 黑袍魔女桃乐丝' /><img class='tp' src='res/wizard.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>黑袍魔女桃乐丝</p></div></li>
+            <li class='avatars wizard trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/wizard/苏醒的贝斯派.png' title='★6 苏醒的贝斯派' /><img class='tp' src='res/wizard.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>苏醒的贝斯派</p></div></li>
         </ul>
         <ul class="priests">
             <li class='avatars priest trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/priest/ICU特工护士.png' title='★6 ICU特工护士' /><img class='tp' src='res/priest.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>ICU特工护士</p></div></li>
