--- a/cq-3d.html
+++ b/cq-3d.html
@@ -18,6 +18,7 @@
         .avatar_type li a { display: block; background-color: #887766; font-size: 14px; width: 63px; border-top: 2px solid #aa9977; border-right: 2px solid #554433; border-bottom: 2px solid #554433; border-left: 2px solid #aa9977; background-color: #887766; }
         .avatar_type li a:hover,.avatar_type li .on { background-color: #FFEEDD; color:#fff; border-top: 2px solid #ffffff; border-right: 2px solid #bcbb99; border-bottom: 2px solid #bcbb99; border-left: 2px solid #ffffff; }
         .avatar_type li a img { vertical-align: middle; margin-right: 7px; margin-left: 3px; }
+        .author { font:bold 14px 'simsum' ; text-align: right; color: #0FF; line-height: 40px; margin-right: 20px; position: absolute; bottom: 0; right: 0; }
         #debug{/*display: none;*/}
         #cnzz_stat_icon_1257087580{display: none;}
     </style>
@@ -149,6 +150,9 @@
             <li class='avatars priest trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/priest/诱惑之奥菲欧.png' title='★6 诱惑之奥菲欧' /><img class='tp' src='res/priest.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>诱惑之奥菲欧</p></div></li>
             <li class='avatars priest trans3d'><div class='carouselItemInner'><img class='avatar' src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/priest/追求幸福的达拉.png' title='★6 追求幸福的达拉' /><img class='tp' src='res/priest.png' /><p class='lv'><img src='res/sixstars.png' /></p><p class='name'>追求幸福的达拉</p></div></li>
         </ul>
+    </div>
+    <div class="author">
+        By：路人甲
     </div>
     <script src='http://conn.oss-cn-shenzhen.aliyuncs.com/cq/js/libs.min.js'></script>
     <script src="js/index.js"></script>
