--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         .avatarlist .lion { display: none; }
         .empty { height: 40px; line-height: 40px; width: 100%;font-size: 14px;text-align:left;margin-left: 5px; }
 
-        .empty a{color:#ffcb39;text-decoration: none;}
+        .empty a{color:#ffcb39;}
 
         .empty a:hover{color:#FF4500;text-decoration:underline;}
 
-        .author { font: 14px bold; text-align: right; color: #C98A0A; line-height: 40px; margin-right: 20px; position: absolute; bottom: 0; right: 0; }
+        .author { font:bold 14px 'simsum' ; text-align: right; color: #E28024; line-height: 40px; margin-right: 20px; position: absolute; bottom: 0; right: 0; }
 
         #cnzz_stat_icon_1257087580{display: none;}
         @media(min-width:1656px) {
@@ -258,9 +258,9 @@
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/priest/诱惑之奥菲欧.png" title="★6 诱惑之奥菲欧" /><img class="tp" src="res/priest.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">诱惑之奥菲欧</p></li>
             <li><img class="avatar" onclick="picBig(event);" src="http://conn.oss-cn-shenzhen.aliyuncs.com/cq/priest/星光之娅莉娅.png" title="★6 星光之娅莉娅" /><img class="tp" src="res/priest.png" /><p class="lv"><img src="res/sixstars.png" /></p><p class="name">星光之娅莉娅</p></li>
         </ul>
-        <div class="empty"><a href="cq-3d.html" title="3D效果，暂不支持IE"> 2D不过瘾？试试3D效果！</a></div>
+        <div class="empty"><a href="cq-3d.html" title="3D效果，暂不支持IE"> 2D还不够？试试3D效果！</a></div>
         <div class="author">
-            Design By：路人甲
+            By：路人甲
         </div>
         <div id="divCenter" style="position: fixed; z-index: 9; display: none; background-color: #564535; width:30px; height:30px;left:30%;top:200px; border:5px solid #fff;">
             <img src="res/close.png" style="position:absolute;right:-7%;top:-7%;width:15%;" onclick="picClose();"/>
